Make pieces move on board
On first click a piece is recorded and the reference board is updated. On second click, the piece is placed and the reference board is updated. Will need to add legality upcoming.

--- a/src/sass/base/_home.scss
+++ b/src/sass/base/_home.scss
@@ -3,3 +3,17 @@
 html {
   font-size: 62.5%; // 1 rem = 10px; 10px/16px - 62.5%
 }
+
+button {
+  display: block;
+
+  &:active {
+    outline: 0;
+    padding: 0;
+  }
+
+  &:focus {
+    outline: 0;
+    padding: 0;
+  }
+}
