Make Knights be able to move
The same general principle as the king as been used. The knight has a set set of squares it can move to. Made the formula and reduced the coord with the array formula. Set the legal moves and viola.

Will need to account for taking pieces but jumping pieces should already be accomplished.

--- a/src/components/Square/Square.scss
+++ b/src/components/Square/Square.scss
@@ -2,11 +2,12 @@
 
 .square {
   border: 1px solid $color--white;
+  cursor: pointer;
   height: 6.2rem;
-  width: 6.2rem;
+  line-height: 50px;
   text-align: center;
   vertical-align: middle;
-  line-height: 50px;
+  width: 6.2rem;
 
   &__white {
     background-color: rgb(210, 180, 140);
