Make Bishop move and add active squares
Pass prop down to square isActive, if the square is active utizling a before pseudoclass add a bullet. I set a 2d array of true null values which I change utilziing the legalmoves array. I change to true if the tempmoves coord.

Bishop moves similar to rook but with some differences around the logic. I have to change x and y on all moves, in any of the directions. Same idea.

Will be working with queen next, will be the same as a rook and queen

--- a/src/components/Square/Square.scss
+++ b/src/components/Square/Square.scss
@@ -8,6 +8,7 @@
   text-align: center;
   vertical-align: middle;
   width: 6.2rem;
+  position: relative;
 
   &__white {
     background-color: rgb(210, 180, 140);
@@ -15,5 +16,14 @@
 
   &__black {
     background-color: rgb(139, 69, 19);
+  }
+
+  &__active::before {
+    content: '•';
+    font-size: 7rem;
+    position: absolute;
+    right: 30%;
+    bottom: 8%;
+    opacity: 60%;
   }
 }
