--- a/src/components/Square/Square.scss
+++ b/src/components/Square/Square.scss
@@ -17,13 +17,36 @@
   &__black {
     background-color: rgb(139, 69, 19);
   }
-
-  &__active::before {
+  &__active--noPiece::before {
     content: '•';
+    color: rgba(20, 30, 85, 0.6);
     font-size: 7rem;
     position: absolute;
     right: 30%;
     bottom: 8%;
-    opacity: 60%;
+  }
+  &__active--piece::before {
+    content: '';
+    display: inline-block;
+    border-left: 20px solid transparent;
+    border-right: 20px solid rgba(20, 30, 85, 0.6);
+    border-bottom: 20px solid transparent;
+    height: 0;
+    width: 0;
+    position: absolute;
+    right: 0;
+    z-index: 2;
+  }
+
+  &__chosen::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    right: 0%;
+    bottom: 0%;
+    z-index: 0;
+    background-color: rgba(20, 85, 30, 0.5);
   }
 }
